Trying to fix weird spacing underneath header

--- a/The-Lady-Barber-2.0/styles.css
+++ b/The-Lady-Barber-2.0/styles.css
@@ -7,8 +7,8 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    scroll-behavior: smooth;
     /* padding: 0; */
+    scroll-behavior: smooth;
 }
 
 html { 
@@ -21,7 +21,10 @@ body { height: 100%; }
 
 ul { list-style: none; }
 
-a { color: black; }
+a { 
+    color: black; 
+    transition: 0.3s;
+}
 
 a:hover { color: var(--secondary-color); }
 
@@ -31,7 +34,7 @@ hr { border: 0.75px solid black; }
 /* dvh -> dynamic viewport height, allows correct resizing on mobile */
 #page_content { 
     overflow: auto;
-    height: 80dvh;
+    height: 75dvh;
 }
 
 #navbar { 
@@ -39,7 +42,8 @@ hr { border: 0.75px solid black; }
     z-index: 100;
     overflow: hidden;
     width: 100%;
-    height: 20dvh;
+    padding-bottom: 1rem;
+    /* height: 25dvh; */
 }
 
 /* #about { background-color: var(--secondary-color); }
@@ -88,13 +92,9 @@ hr { border: 0.75px solid black; }
 
 .small-top-bottom-padding { padding: 1rem 0; }
 
-.small-padding { padding: 1rem; }
-
 .small-top-padding { padding-top: 1rem; }
 
 .small-right-padding { padding-right: 1rem; }
-
-/* .small-bottom-padding { padding-bottom: 1rem; } */
 
 .small-left-padding { padding-left: 1rem; }
 
@@ -110,8 +110,6 @@ hr { border: 0.75px solid black; }
     height: 75px;
     border-radius: 50%;
 }
-
-/* .about-text { width: 40ch; } */
 
 .about-img {
     width: 250px;
